converted spi to dma, deleted duplecated header

--- a/SR16_BMS_Reduced_Delay.ioc
+++ b/SR16_BMS_Reduced_Delay.ioc
@@ -20,6 +20,57 @@ CAN1.CalculateTimeBit=2000
 CAN1.CalculateTimeQuantum=250.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
 CAN1.Prescaler=9
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.Request1=SPI1_RX
+Dma.Request2=SPI1_TX
+Dma.Request3=USART1_RX
+Dma.Request4=USART1_TX
+Dma.RequestsNb=5
+Dma.SPI1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.1.Instance=DMA1_Channel2
+Dma.SPI1_RX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.1.Mode=DMA_NORMAL
+Dma.SPI1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.SPI1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.2.Instance=DMA1_Channel3
+Dma.SPI1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.2.Mode=DMA_NORMAL
+Dma.SPI1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.2.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.3.Instance=DMA1_Channel5
+Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.3.Mode=DMA_NORMAL
+Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART1_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.4.Instance=DMA1_Channel4
+Dma.USART1_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.4.Mode=DMA_NORMAL
+Dma.USART1_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -28,13 +79,14 @@ Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
 Mcu.IP2=CAN1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=TIM7
-Mcu.IP8=USART1
-Mcu.IPNb=9
+Mcu.IP3=DMA
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=TIM7
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F105R(8-B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
@@ -45,16 +97,13 @@ Mcu.Pin12=PB1
 Mcu.Pin13=PC6
 Mcu.Pin14=PA9
 Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PB8
+Mcu.Pin19=PB9
 Mcu.Pin2=PC0
-Mcu.Pin20=PB7
-Mcu.Pin21=PB8
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PC1
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
@@ -62,13 +111,22 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=25
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F105RBTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
+NVIC.ADC1_2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -76,8 +134,11 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=MCU_USB_INT
@@ -87,10 +148,6 @@ PA0-WKUP.Signal=SYS_WKUP
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.Locked=true
-PA11.Signal=USART1_CTS
-PA12.Locked=true
-PA12.Signal=USART1_RTS
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -115,10 +172,6 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=MCU_SHUTDOWN_SIGNAL
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=MCU_HV_SENSE_ENABLE
-PB7.Locked=true
-PB7.Signal=GPIO_Input
 PB8.Locked=true
 PB8.Mode=CAN_Activate
 PB8.Signal=CAN1_RX
@@ -176,7 +229,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_CAN1_Init-CAN1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_CAN1_Init-CAN1-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -229,7 +282,8 @@ TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM7.IPParameters=AutoReloadPreload,Period,Prescaler
 TIM7.Period=65535
 TIM7.Prescaler=0
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=115200
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
