implemented intruption on CAN

--- a/SR16_BMS_Reduced_Delay.ioc
+++ b/SR16_BMS_Reduced_Delay.ioc
@@ -20,59 +20,6 @@ CAN1.CalculateTimeBit=2000
 CAN1.CalculateTimeQuantum=250.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
 CAN1.Prescaler=9
-<<<<<<< HEAD
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_NORMAL
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=ADC1
-Dma.Request1=SPI1_RX
-Dma.Request2=SPI1_TX
-Dma.Request3=USART1_RX
-Dma.Request4=USART1_TX
-Dma.RequestsNb=5
-Dma.SPI1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.1.Instance=DMA1_Channel2
-Dma.SPI1_RX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI1_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.1.Mode=DMA_NORMAL
-Dma.SPI1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI1_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.1.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.2.Instance=DMA1_Channel3
-Dma.SPI1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.2.Mode=DMA_NORMAL
-Dma.SPI1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.2.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.3.Instance=DMA1_Channel5
-Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.3.Mode=DMA_NORMAL
-Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART1_TX.4.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.4.Instance=DMA1_Channel4
-Dma.USART1_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.4.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.4.Mode=DMA_NORMAL
-Dma.USART1_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.4.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-=======
 Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.2.Instance=DMA1_Channel1
 Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -114,7 +61,6 @@ Dma.USART1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
->>>>>>> f4468bfacfee563f36ab7a8748ecdd98968165c9
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -143,20 +89,11 @@ Mcu.Pin14=PA9
 Mcu.Pin15=PA10
 Mcu.Pin16=PA13
 Mcu.Pin17=PA14
-<<<<<<< HEAD
 Mcu.Pin18=PB8
 Mcu.Pin19=PB9
 Mcu.Pin2=PC0
 Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
-=======
-Mcu.Pin18=PB7
-Mcu.Pin19=PB8
-Mcu.Pin2=PC0
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM7_VS_ClockSourceINT
->>>>>>> 79720c75978d7a53cad5c8ed0c4c2f370dfd6ec9
 Mcu.Pin3=PC1
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
@@ -164,11 +101,7 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-<<<<<<< HEAD
 Mcu.PinsNb=22
-=======
-Mcu.PinsNb=23
->>>>>>> 79720c75978d7a53cad5c8ed0c4c2f370dfd6ec9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F105RBTx
@@ -176,21 +109,14 @@ MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.ADC1_2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-<<<<<<< HEAD
 NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-=======
 NVIC.DMA1_Channel1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
->>>>>>> f4468bfacfee563f36ab7a8748ecdd98968165c9
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -201,10 +127,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-<<<<<<< HEAD
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-=======
->>>>>>> f4468bfacfee563f36ab7a8748ecdd98968165c9
 NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
@@ -215,10 +138,7 @@ PA0-WKUP.Signal=SYS_WKUP
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-<<<<<<< HEAD
-=======
 PA13.Locked=true
->>>>>>> 79720c75978d7a53cad5c8ed0c4c2f370dfd6ec9
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
