--- a/SR16_BMS_Reduced_Delay.ioc
+++ b/SR16_BMS_Reduced_Delay.ioc
@@ -274,7 +274,7 @@ TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM7.IPParameters=AutoReloadPreload,Period,Prescaler
 TIM7.Period=65535
 TIM7.Prescaler=0
-USART1.BaudRate=4000000
+USART1.BaudRate=250000
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
