--- a/SR16_BMS_Reduced_Delay.ioc
+++ b/SR16_BMS_Reduced_Delay.ioc
@@ -20,53 +20,6 @@ CAN1.CalculateTimeBit=2000
 CAN1.CalculateTimeQuantum=250.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
 CAN1.Prescaler=9
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 26541ea (implemented intruption on CAN)
-Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.2.Instance=DMA1_Channel1
-Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.2.Mode=DMA_NORMAL
-Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=SPI1_RX
-Dma.Request1=SPI1_TX
-Dma.Request2=ADC1
-Dma.Request3=USART1_TX
-Dma.RequestsNb=4
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.Instance=DMA1_Channel2
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_NORMAL
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.1.Instance=DMA1_Channel3
-Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.1.Mode=DMA_NORMAL
-Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.3.Instance=DMA1_Channel4
-Dma.USART1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.3.Mode=DMA_NORMAL
-Dma.USART1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-<<<<<<< HEAD
-=======
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -118,9 +71,6 @@ Dma.USART1_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_TX.4.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_TX.4.Priority=DMA_PRIORITY_LOW
 Dma.USART1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
->>>>>>> 724b400 (converted spi to dma, deleted duplecated header)
-=======
->>>>>>> 26541ea (implemented intruption on CAN)
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -149,34 +99,11 @@ Mcu.Pin14=PA9
 Mcu.Pin15=PA10
 Mcu.Pin16=PA13
 Mcu.Pin17=PA14
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-Mcu.Pin18=PB7
-Mcu.Pin19=PB8
-Mcu.Pin2=PC0
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM7_VS_ClockSourceINT
-=======
-=======
->>>>>>> 26541ea (implemented intruption on CAN)
 Mcu.Pin18=PB8
 Mcu.Pin19=PB9
 Mcu.Pin2=PC0
 Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
-<<<<<<< HEAD
->>>>>>> 724b400 (converted spi to dma, deleted duplecated header)
-=======
->>>>>>> 26541ea (implemented intruption on CAN)
-=======
-Mcu.Pin18=PB8
-Mcu.Pin19=PB9
-Mcu.Pin2=PC0
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
->>>>>>> 960aaba45c70fda088e10de8fd957a789ca8c9f3
 Mcu.Pin3=PC1
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
@@ -184,19 +111,7 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-Mcu.PinsNb=23
-=======
 Mcu.PinsNb=22
->>>>>>> 724b400 (converted spi to dma, deleted duplecated header)
-=======
-Mcu.PinsNb=22
->>>>>>> 26541ea (implemented intruption on CAN)
-=======
-Mcu.PinsNb=22
->>>>>>> 960aaba45c70fda088e10de8fd957a789ca8c9f3
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F105RBTx
@@ -204,39 +119,15 @@ MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.ADC1_2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
 NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
->>>>>>> 960aaba45c70fda088e10de8fd957a789ca8c9f3
 NVIC.DMA1_Channel1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
-=======
-=======
->>>>>>> 26541ea (implemented intruption on CAN)
-NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-<<<<<<< HEAD
-NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel5_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
->>>>>>> 724b400 (converted spi to dma, deleted duplecated header)
-=======
-NVIC.DMA1_Channel1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
->>>>>>> 26541ea (implemented intruption on CAN)
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -247,18 +138,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
->>>>>>> 724b400 (converted spi to dma, deleted duplecated header)
-=======
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
->>>>>>> 26541ea (implemented intruption on CAN)
-=======
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
->>>>>>> 960aaba45c70fda088e10de8fd957a789ca8c9f3
 NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
@@ -269,14 +149,7 @@ PA0-WKUP.Signal=SYS_WKUP
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-<<<<<<< HEAD
-<<<<<<< HEAD
 PA13.Locked=true
-=======
->>>>>>> 724b400 (converted spi to dma, deleted duplecated header)
-=======
-PA13.Locked=true
->>>>>>> 26541ea (implemented intruption on CAN)
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
@@ -289,6 +162,8 @@ PA4.Signal=GPIO_Output
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_PuPd
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
