--- a/SR16_BMS_Reduced_Delay.ioc
+++ b/SR16_BMS_Reduced_Delay.ioc
@@ -133,6 +133,8 @@ PC1.Locked=true
 PC1.Signal=ADCx_IN11
 PC2.Locked=true
 PC2.Signal=ADCx_IN12
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=SHUNT_SIGNAL
 PC3.Locked=true
 PC3.Signal=ADCx_IN13
 PC5.GPIOParameters=GPIO_Label
