--- a/SR16_BMS_Reduced_Delay.ioc
+++ b/SR16_BMS_Reduced_Delay.ioc
@@ -5,11 +5,11 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
 ADC2.NbrOfConversionFlag=1
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC2.Rank-1\#ChannelRegularConversion=1
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -210,11 +210,11 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.ADCx_IN10.0=ADC2_IN10,IN10
+SH.ADCx_IN10.0=ADC2_IN10
 SH.ADCx_IN10.ConfNb=1
-SH.ADCx_IN11.0=ADC2_IN11,IN11
+SH.ADCx_IN11.0=ADC2_IN11
 SH.ADCx_IN11.ConfNb=1
-SH.ADCx_IN12.0=ADC2_IN12,IN12
+SH.ADCx_IN12.0=ADC2_IN12
 SH.ADCx_IN12.ConfNb=1
 SH.ADCx_IN13.0=ADC2_IN13,IN13
 SH.ADCx_IN13.ConfNb=1
