commented out the function for testing

--- a/SR16_BMS.ioc
+++ b/SR16_BMS.ioc
@@ -167,8 +167,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=SR16_BMS_Reduced_Delay.ioc
-ProjectManager.ProjectName=SR16_BMS_Reduced_Delay
+ProjectManager.ProjectFileName=SR16_BMS.ioc
+ProjectManager.ProjectName=SR16_BMS
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
