--- a/SR16_BMS.ioc
+++ b/SR16_BMS.ioc
@@ -118,6 +118,8 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=MCU_SHUTDOWN_SIGNAL
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_PuPd
+PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.Locked=true
 PB8.Mode=CAN_Activate
 PB8.Signal=CAN1_RX
